tests/neg/fence2.stk
fun main =
  (val a = 2)
  (if 3 > 2 then 1 else 2)
  (while 3 > 2 do 1 p)
  (a =                                  // error  // error  // error
     3 + 6)
